# dino-park-evo

./: .dockerignore  Cargo.toml  Dockerfile.local  README.md  myke.yml
src/: groups.rs  main.rs  settings.rs  update_app.rs  updater.rs
