[package]
name = "dino-park-evo"
version = "0.0.1"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

[dependencies]
cis_client = { git = "https://github.com/fiji-flo/cis_client-rust", branch = "async-2", version = "0.1.0-beta.2" }
cis_profile = { git = "https://github.com/fiji-flo/cis_profile-rust", branch = "0.1.0", version = "0.1.0", features = ["aws", "vendored"] }
actix-web = "1.0"
actix-cors = "0.1"
futures = "0.1"
log = "0.4"
env_logger = "0.6"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
reqwest = "0.9"
chrono = "0.4"
config = "0.9"
failure = "0.1.5"
failure_derive = "0.1.5"
biscuit = "0.2"
url = "1.7.2"
tokio = "0.1"
